Added base version of OAuth2 impl

--- a/ui-ngx/src/app/modules/login/pages/login/login.component.html
+++ b/ui-ngx/src/app/modules/login/pages/login/login.component.html
@@ -52,6 +52,7 @@
           </div>
         </fieldset>
       </form>
+      <a mat-raised-button href="http://localhost:8080/oauth2/authorization/A">Login with SSO</a>
     </mat-card-content>
   </mat-card>
 </div>
